fixed button alignment

--- a/docroot/modules/custom/planet_language_switcher/css/language-switcher.css
+++ b/docroot/modules/custom/planet_language_switcher/css/language-switcher.css
@@ -416,8 +416,8 @@ a[href^="/node/"].toolbar-icon-edit.toolbar-item {
   border-radius: 8px 8px 0 0;
   height: 213px
 }
-.article-cards-wrapper {
-  min-height: 600px
+.last-articles-cards{
+  min-height: 600px 
 }
 .article-cards-wrapper .coh-column {
   display: flex;
